--- a/index.html
+++ b/index.html
@@ -68,42 +68,45 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
-/* 캘린더 화면 한 화면 보기에 최적화 */
+/* 캘린더 한 화면 구성을 위한 스타일 수정 */
 .cal-wrapper { background: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
 .cal-container { display: flex; width: 300%; flex: 1; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
 
-.cal-header { display: flex; justify-content: space-between; align-items: center; padding: 8px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
+.cal-header { display: flex; justify-content: space-between; align-items: center; padding: 5px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
 .cal-header button { width: 34px !important; height: 34px; padding: 0 !important; font-size: 14px; }
 
-/* 여백 제거 및 한 화면 구성을 위한 그리드 설정 */
+/* 요일과 날짜 칸 여백 제거 및 보더 중첩 방지 */
 .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); background: var(--line); gap: 0; flex: 1; width: 100%; border-top: 1px solid var(--line); border-left: 1px solid var(--line); }
 
-/* 요일 칸 디자인 수정 */
-.cal-day-label { background: #fdfdfd; height: 24px; display: flex; align-items: center; justify-content: center; text-align: center; font-size: 12px; font-weight: bold; line-height: 1; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
+/* 요일 칸 높이 최소화 및 회색 영역 삭제 */
+.cal-day-label { background: #fdfdfd; height: 20px; display: flex; align-items: center; justify-content: center; text-align: center; font-size: 11px; font-weight: bold; line-height: 1; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
 
-.cal-day { background: #fff; padding: 4px; font-size: 11px; cursor: pointer; display: flex; flex-direction: column; gap: 2px; position: relative; overflow: hidden; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); flex: 1; }
+/* 날짜 칸 유동 높이 설정 */
+.cal-day { background: #fff; padding: 3px; font-size: 10px; cursor: pointer; display: flex; flex-direction: column; gap: 1px; position: relative; overflow: hidden; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); flex: 1; }
 .cal-day.sun { color: red; }
 .cal-day.sat { color: blue; }
 .cal-day.other { color: #ccc !important; background: #fafafa; }
 .cal-day.other .cal-event-item { opacity: 0.4; }
 .cal-day.today { background: #fff; } 
-.today-text { font-size: 8px; color: var(--brand); font-weight: bold; margin-left: 2px; }
+.today-text { font-size: 7px; color: var(--brand); font-weight: bold; margin-left: 2px; }
 
 .cal-event-container { display: flex; flex-direction: column; gap: 1px; overflow: hidden; }
 .cal-event-item { 
     color: #000; 
     background-color: #eef2ff; 
-    padding: 1px 2px; 
+    padding: 0px 2px; 
     border-radius: 2px; 
-    font-size: 9px;
+    font-size: 8px;
     line-height: 1.1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-/* 하단 버튼 영역 최적화 */
-.cal-footer { padding: 8px 15px; background: var(--bg); flex-shrink: 0; border-top: 1px solid var(--line); }
+
+/* 하단 버튼 영역을 한 화면에 고정 */
+.cal-footer { padding: 5px 15px; background: var(--bg); flex-shrink: 0; border-top: 1px solid var(--line); }
+.cal-footer button { margin: 2px 0; }
 .stat-item {border: 1px solid var(--line); border-radius: 8px; padding: 15px; margin-bottom: 10px; line-height: 1.6;}
 </style>
 </head>
