--- a/index.html
+++ b/index.html
@@ -68,45 +68,42 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
-/* 캘린더 한 화면 구성을 위한 스타일 수정 */
+/* 캘린더 화면 한 화면 보기에 최적화 */
 .cal-wrapper { background: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
 .cal-container { display: flex; width: 300%; flex: 1; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
 
-.cal-header { display: flex; justify-content: space-between; align-items: center; padding: 5px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
+.cal-header { display: flex; justify-content: space-between; align-items: center; padding: 8px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
 .cal-header button { width: 34px !important; height: 34px; padding: 0 !important; font-size: 14px; }
 
-/* 요일과 날짜 칸 여백 제거 및 보더 중첩 방지 */
+/* 여백 제거 및 한 화면 구성을 위한 그리드 설정 */
 .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); background: var(--line); gap: 0; flex: 1; width: 100%; border-top: 1px solid var(--line); border-left: 1px solid var(--line); }
 
-/* 요일 칸 높이 최소화 및 회색 영역 삭제 */
-.cal-day-label { background: #fdfdfd; height: 20px; display: flex; align-items: center; justify-content: center; text-align: center; font-size: 11px; font-weight: bold; line-height: 1; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
+/* 요일 칸 세로 사이즈를 글자 크기 정도로 줄임 */
+.cal-day-label { background: #fdfdfd; height: 18px; display: flex; align-items: center; justify-content: center; text-align: center; font-size: 12px; font-weight: bold; line-height: 1; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
 
-/* 날짜 칸 유동 높이 설정 */
-.cal-day { background: #fff; padding: 3px; font-size: 10px; cursor: pointer; display: flex; flex-direction: column; gap: 1px; position: relative; overflow: hidden; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); flex: 1; }
+.cal-day { background: #fff; padding: 4px; font-size: 11px; cursor: pointer; display: flex; flex-direction: column; gap: 2px; position: relative; overflow: hidden; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); flex: 1; }
 .cal-day.sun { color: red; }
 .cal-day.sat { color: blue; }
 .cal-day.other { color: #ccc !important; background: #fafafa; }
 .cal-day.other .cal-event-item { opacity: 0.4; }
 .cal-day.today { background: #fff; } 
-.today-text { font-size: 7px; color: var(--brand); font-weight: bold; margin-left: 2px; }
+.today-text { font-size: 8px; color: var(--brand); font-weight: bold; margin-left: 2px; }
 
 .cal-event-container { display: flex; flex-direction: column; gap: 1px; overflow: hidden; }
 .cal-event-item { 
     color: #000; 
     background-color: #eef2ff; 
-    padding: 0px 2px; 
+    padding: 1px 2px; 
     border-radius: 2px; 
-    font-size: 8px;
+    font-size: 9px;
     line-height: 1.1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
-/* 하단 버튼 영역을 한 화면에 고정 */
-.cal-footer { padding: 5px 15px; background: var(--bg); flex-shrink: 0; border-top: 1px solid var(--line); }
-.cal-footer button { margin: 2px 0; }
+/* 하단 버튼 영역 최적화 */
+.cal-footer { padding: 8px 15px; background: var(--bg); flex-shrink: 0; border-top: 1px solid var(--line); }
 .stat-item {border: 1px solid var(--line); border-radius: 8px; padding: 15px; margin-bottom: 10px; line-height: 1.6;}
 </style>
 </head>
@@ -355,22 +352,26 @@ function renderMonthGrid(dateObj, targetElement) {
             <div class="cal-day-label">수</div><div class="cal-day-label">목</div><div class="cal-day-label">금</div><div class="cal-day-label sat">토</div>
     `;
 
+    // 전월 날짜 (회색)
     for(let i = firstDay - 1; i >= 0; i--) {
         const d = prevLastDate - i;
         const dKey = `${month === 0 ? year-1 : year}-${String(month === 0 ? 12 : month).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
         html += renderDayCell(year, month - 1, d, dKey, true);
     }
     
+    // 현재 월 날짜
     for(let d = 1; d <= lastDate; d++) {
         const dKey = `${year}-${String(month+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
         html += renderDayCell(year, month, d, dKey, false);
     }
 
-    const totalCells = 42; 
-    const nextCells = totalCells - (firstDay + lastDate);
-    for(let d = 1; d <= nextCells; d++) {
-        const dKey = `${month === 11 ? year+1 : year}-${String(month === 11 ? 1 : month+2).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
-        html += renderDayCell(year, month + 1, d, dKey, true);
+    // 다음 달 일자가 한 줄 추가되어 보이는 현상을 방지하기 위해 
+    // 전체 그리드 칸수(요일포함 42칸 등)를 채우지 않고 해당 월의 마지막 날까지만 출력함.
+    // 다만 그리드 레이아웃 유지를 위해 빈 칸을 다음 달 일자 대신 채움 (표시되지 않게)
+    const currentCells = firstDay + lastDate;
+    const remaining = currentCells % 7 === 0 ? 0 : 7 - (currentCells % 7);
+    for(let d = 1; d <= remaining; d++) {
+        html += `<div class="cal-day other" style="visibility:hidden;"></div>`;
     }
     
     html += `</div>`;
