--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 /* 여백 제거 및 한 화면 구성을 위한 그리드 설정 */
 .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); background: var(--line); gap: 0; flex: 1; width: 100%; border-top: 1px solid var(--line); border-left: 1px solid var(--line); }
 
-/* 요일 칸 세로 사이즈를 글자 크기 정도로 줄임 */
+/* 요일 칸 디자인 수정 - 세로 사이즈를 글자 크기 정도로 축소 */
 .cal-day-label { background: #fdfdfd; height: 18px; display: flex; align-items: center; justify-content: center; text-align: center; font-size: 12px; font-weight: bold; line-height: 1; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
 
+/* 날짜 칸 유동 높이 설정하여 회색 여백 제거 */
 .cal-day { background: #fff; padding: 4px; font-size: 11px; cursor: pointer; display: flex; flex-direction: column; gap: 2px; position: relative; overflow: hidden; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); flex: 1; }
 .cal-day.sun { color: red; }
 .cal-day.sat { color: blue; }
@@ -102,7 +103,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     overflow: hidden;
     text-overflow: ellipsis;
 }
-/* 하단 버튼 영역 최적화 */
+/* 하단 버튼 영역 최적화 - 스크롤 없이 항상 보이도록 */
 .cal-footer { padding: 8px 15px; background: var(--bg); flex-shrink: 0; border-top: 1px solid var(--line); }
 .stat-item {border: 1px solid var(--line); border-radius: 8px; padding: 15px; margin-bottom: 10px; line-height: 1.6;}
 </style>
@@ -263,7 +264,7 @@ function submit(){
   const newPost = { id: Date.now().toString(), title:t, purpose:p, plan:pl, cost:rawC, time:now(), mom: "pending", dad: "pending", momC: "", dadC: "", momTime: "", dadTime: "" };
   
   db.ref("approvals").push(newPost).then(() => {
-    const msg = `[똑똑! 가족게시판]\n아이의 의견이 접수되었습니다!`;
+    const msg = `[똑똑! 가족게시판]\n아이의 의견이 접수되었습니다\n\n제목 : ${t}\n금액 : ${Number(rawC).toLocaleString()}원`;
     const m = document.getElementById("pwModal");
     m.style.display = "flex";
     m.innerHTML = `<div class="card" style="text-align:center;">
@@ -352,7 +353,10 @@ function renderMonthGrid(dateObj, targetElement) {
             <div class="cal-day-label">수</div><div class="cal-day-label">목</div><div class="cal-day-label">금</div><div class="cal-day-label sat">토</div>
     `;
 
-    // 전월 날짜 (회색)
+    // 날짜를 렌더링할 때 다음 달 일자가 한 줄 추가되어 보이는 현상을 방지하기 위해 
+    // 총 42칸(6주)을 강제로 채우지 않고 해당 월의 마지막 날까지만 렌더링하도록 수정
+    
+    // 전월 날짜 (회색 표시)
     for(let i = firstDay - 1; i >= 0; i--) {
         const d = prevLastDate - i;
         const dKey = `${month === 0 ? year-1 : year}-${String(month === 0 ? 12 : month).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
@@ -365,13 +369,11 @@ function renderMonthGrid(dateObj, targetElement) {
         html += renderDayCell(year, month, d, dKey, false);
     }
 
-    // 다음 달 일자가 한 줄 추가되어 보이는 현상을 방지하기 위해 
-    // 전체 그리드 칸수(요일포함 42칸 등)를 채우지 않고 해당 월의 마지막 날까지만 출력함.
-    // 다만 그리드 레이아웃 유지를 위해 빈 칸을 다음 달 일자 대신 채움 (표시되지 않게)
-    const currentCells = firstDay + lastDate;
-    const remaining = currentCells % 7 === 0 ? 0 : 7 - (currentCells % 7);
-    for(let d = 1; d <= remaining; d++) {
-        html += `<div class="cal-day other" style="visibility:hidden;"></div>`;
+    // 다음 달 날짜는 다음 줄로 넘어가지 않도록 마지막 날이 토요일이 아닐 때만 필요한 만큼 빈 칸 채움 (표시는 안 함)
+    const currentCellsCount = firstDay + lastDate;
+    const remainingInWeek = (7 - (currentCellsCount % 7)) % 7;
+    for(let d = 1; d <= remainingInWeek; d++) {
+        html += `<div class="cal-day other" style="visibility:hidden; flex:1;"></div>`;
     }
     
     html += `</div>`;
